demos/grpc/user-server/kube/overlays/dev/ingress-host.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-grpc-users
spec:
  rules:
  - host: users.grpc.demo.dev.apps.v2tools.com
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-grpc-users
          servicePort: grpc
        
  tls:
  - hosts:
    - users.grpc.demo.dev.apps.v2tools.com
    secretName: users-grpc-demo-apps-v2tools-crt
